[package]
name = "nb"
version = "0.1.0"
authors = ["xxchan <xxchan@sjtu.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.8.1"
serde_json = "1.0.51"
clap = "~2.33.0"
failure = "0.1.6"
serde = {version ="1.0", features =["derive"]}
sled = "0.30.3"
log = "0.4.8"
env_logger = "0.7.1"
rust-crypto = "^0.2"